--- a/Dockerfile.amd64
+++ b/Dockerfile.amd64
@@ -1,5 +1,7 @@
 FROM ubuntu:18.04
 
+ENV DEBIAN_FRONTEND="noninteractive"
+
 RUN apt update && \
     apt upgrade -y && \
     apt install -y smokeping && \
