--- a/Dockerfile.armhf
+++ b/Dockerfile.armhf
@@ -2,6 +2,8 @@ FROM arm32v7/ubuntu:18.04
 
 COPY qemu-arm-static /usr/bin
 
+ENV DEBIAN_FRONTEND="noninteractive"
+
 RUN apt update && \
     apt upgrade -y && \
     apt install -y smokeping && \
