--- a/Dockerfile.amd64
+++ b/Dockerfile.amd64
@@ -1,10 +1,15 @@
 FROM ubuntu:18.04
 
-ENV DEBIAN_FRONTEND="noninteractive"
+ENV DEBIAN_FRONTEND="noninteractive" HOME="/root" TERM="xterm" APACHE_LOG_DIR="/var/log/apache2" APACHE_LOCK_DIR="/var/lock/apache2" APACHE_PID_FILE="/var/run/apache2.pid"
 
 RUN apt update && \
     apt upgrade -y && \
-    apt install -y smokeping && \
+    apt install -y smokeping rrdtool librrds-perl libssl-dev perl apache2 && \
+    ln -s /etc/smokeping/apache2.conf /etc/apache2/conf-available/apache2.conf && \
+    a2enconf apache2 && \
+    a2enmod cgid && \
+    apt-get autoremove -y && \
+    apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
 WORKDIR /var/run/smokeping
