--- a/Dockerfile.amd64
+++ b/Dockerfile.amd64
@@ -5,7 +5,7 @@ ENV DEBIAN_FRONTEND="noninteractive" HOME="/root" TERM="xterm" APACHE_LOG_DIR="/
 RUN apt update && \
     apt upgrade -y && \
     apt install -y smokeping rrdtool librrds-perl libssl-dev perl apache2 && \
-    a2enconf apache2 && \
+    a2enconf * && \
     a2enmod cgid && \
     apt-get autoremove -y && \
     apt-get clean && \
