--- a/Dockerfile.amd64
+++ b/Dockerfile.amd64
@@ -4,8 +4,11 @@ ENV DEBIAN_FRONTEND="noninteractive" HOME="/root" TERM="xterm" APACHE_LOG_DIR="/
 
 RUN apt update && \
     apt upgrade -y && \
-    apt install -y smokeping rrdtool librrds-perl libssl-dev perl apache2 && \
-    a2enconf * && \
+    apt install -y smokeping rrdtool librrds-perl libssl-dev perl apache2
+
+WORKDIR /etc/apache2/conf-available
+
+RUN a2enconf * && \
     a2enmod cgid && \
     apt-get autoremove -y && \
     apt-get clean && \
